--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "wrav/related",
     "description": "A simple plugin that adds a widget within the Craft CP page sidebar, allowing you to quickly and easily access related entries.",
     "type": "craft-plugin",
-    "version": "1.1.5",
+    "version": "1.1.6",
     "keywords": [
         "craft",
         "cms",
@@ -22,6 +22,7 @@
         }
     ],
     "require": {
+        "php": ">=7.2.5",
         "craftcms/cms": "^3.0.0-RC1"
     },
     "autoload": {
